// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<li
  class="yozora-list-item yozora-list-task-item custom-list-item"
  style="color:orange"
>
  <span
    class="yozora-list-task-item__checkbox"
  >
    <input
      disabled=""
      type="checkbox"
    />
    <span
      data-status="doing"
    />
  </span>
  <p>
    some text1
    <span>
      some text2
    </span>
  </p>
  <blockquote>
    some text3
  </blockquote>
</li>
`;

exports[`snapshot default 1`] = `
<li
  class="yozora-list-item yozora-list-task-item"
  style="color:orange;font-size:16px"
>
  <span
    class="yozora-list-task-item__checkbox"
  >
    <input
      checked=""
      disabled=""
      type="checkbox"
    />
    <span
      data-status="done"
    />
  </span>
  <p>
    some text1
    <span>
      some text2
    </span>
  </p>
  <blockquote>
    some text3
  </blockquote>
</li>
`;
